# BlendModes

./: .gitignore  CHANGELOG.md  DOCS.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: README.md
DOCS/blendmodes/: blend.md  blendtype.md  imagetools.md  index.md
blendmodes/: __init__.py  __main.py  blend.py  blendtype.py  cli.py  imagetools.py  imgdiff.py
documentation/reference/: README.md
documentation/reference/blendmodes/: __main.md  blend.md  blendtype.md  cli.md  imagetools.md  imgdiff.md  index.md
documentation/tutorials/: README.md  blend_examples.md  blend_examples_2.md
test/: test.py
tests/: test_cli.py  test_imgdiff.py  test_main.py  test_perf.py
tests/data/src/: genimgs.py
