[tool.poetry]
name = "blendmodes"
version = "2022"
license = "mit"
description = "Use this module to apply a number of blending modes to a background and foreground image"
authors = ["FredHappyface"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/BlendModes"
repository = "https://github.com/FHPythonUtils/BlendModes"
documentation = "https://github.com/FHPythonUtils/BlendModes/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Pillow = "<10,>=9.0.0"
numpy = "<2,>=1.22.1"
aenum = "<4,>=3.1.7"
deprecation = "<3,>=2.1.0"

[tool.poetry.dev-dependencies]
imgcompare = "^2.0.1"
pytest = "^6.2.5"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-patterns = "test_.*?py"

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = [
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation"
]
